deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      securityContext:
        fsGroup: 2000
      containers:
      - name: homepage
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        image: "274295908850.dkr.ecr.eu-west-1.amazonaws.com/pauwels-labs/homepage:0.3.2-alpine3.16"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 256m
            memory: 256Mi
          requests:
            cpu: 256m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/homepage/config
      volumes:
      - name: config
        secret:
          secretName: config-homepage
