deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${envname}-homepage"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
