deploy/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: homepage
spec:
  hosts:
  - dev.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: homepage
    match:
    - uri:
        prefix: "/t/pauwels-labs-main/homepage"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: homepage
  - name: homepage-referer
    match:
    - headers:
        referer:
          regex: "^.*/t/pauwels-labs-main/homepage.*$"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: homepage
